// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Default button component renders correctly 1`] = `
<Memo()
  childern="Facbook"
>
  <button
    className="btn btn--document"
  />
</Memo()>
`;

exports[`Button component Primary button component renders correctly 1`] = `
<Memo()
  childern="Facbook"
  variation="primary"
>
  <button
    className="btn btn--primary"
  />
</Memo()>
`;

exports[`Button component Primary button component renders correctly 2`] = `
<Memo()
  childern="Facbook"
  variation="secondary"
>
  <button
    className="btn btn--secondary"
  />
</Memo()>
`;
